- Label de columnas en tablas -> Angular MAterial 19 parece haber cambiado su color a negro. Fijamos blanco. - Columnas visibles en tablas -> internacionalizado para mostrar el label en el idioma requerido

--- a/src/app/genera-localizacion/genera-localizacion.component.html
+++ b/src/app/genera-localizacion/genera-localizacion.component.html
@@ -480,7 +480,7 @@
                 @for (columna of listaColumnasDirecciones; track columna) {
                   <mat-option #matOptionColumDirecciones [value]="columna"
                     (click)="togglePerOneColumnasDireccion(matOptionColumDirecciones.selected, matOptionColumDirecciones.value)">
-                    {{columna}}
+                    {{columna | translate}}
                   </mat-option>
                 }
               </mat-select>
