Se incorporan algunas herramientas para medir accesibilidad directamente en código.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -137,7 +137,7 @@
         </svg>
     </div>
     <div class="card-social-up">
-      <a href="https://www.linkedin.com/in/josejgalvez" target="_blank" >
+      <a href="https://www.linkedin.com/in/josejgalvez" aria-label="Acceso a perfil de Linkedin del autor" target="_blank" >
         <button data-toggle1="true" class="card-social-card1" visible="data-toggle1 = 'true'">
             <!--
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0,0,256,256"
