Incluir ejecución de test de accesibilidad con axe-core con E2E (Playwright )

--- a/src/app/genera-documentos/genera-documentos.component.html
+++ b/src/app/genera-documentos/genera-documentos.component.html
@@ -19,7 +19,8 @@
         <mat-card-content>
           <button type="button" mat-fab class="botonRotatorio" attr.aria-label="{{ 'generadores.jpromocion.documentos.frame.generarnif' | translate }}"
             (click)="onClickBotonGenerarListaNif()"
-            matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.generar.tooltip' | translate }}" matTooltipPosition="below">
+            matTooltip="{{ 'generadores.jpromocion.generarcomunes.boton.generar.tooltip' | translate }}" matTooltipPosition="below"
+            id="btnGenerarNif">
             <mat-icon>refresh</mat-icon>
           </button>
           <button type="button" mat-fab class="botonRotatorio" [@encogimientoAnimation] *ngIf="listaNifs?.length && listaNifs.length > 0"
